F&GDEV/src/objects/Policy_Form_Detail__c.object
<CustomObject>
    <description>Object utilized for Product Development efforts</description>
    <fields>
        <fullName>Annuity__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Annuity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Approved_States__c</fullName>
        <label>Approved States</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Approved_Status__c</fullName>
        <formula>IF( Total_Policy_Form_State__c ==  Total_Policy_Form_State_in_Approved__c , true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Approved Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Base_Policy_Form__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Base Policy Form</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Compact_Situs_Approval_Date__c</fullName>
        <label>Compact/Situs Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Current_Analyst__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Current Analyst</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.Profile.Id</field>
                <operation>equals</operation>
                <value>00eM0000000M2fu</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Policy_Form_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Filing_Initiative__c</fullName>
        <label>Filing Initiative</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Filing_Strategy__c</fullName>
        <label>Filing Strategy</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Individual</fullName>
                </value>
                <value>
                    <fullName>IIPRC</fullName>
                </value>
                <value>
                    <fullName>Group</fullName>
                </value>
                <value>
                    <fullName>TBD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Insurance_Type__c</fullName>
        <label>Insurance Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Annuity</fullName>
                </value>
                <value>
                    <fullName>Life</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_Primary__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Primary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Legacy_PD_Database_ID__c</fullName>
        <label>Legacy PD Database ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Life__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Life</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Number_of_Approvals__c</fullName>
        <description>Number of approvals for policy form states that were submitted for approval. To be used for workflow to change Policy Form (parent) record to a status of Approved.</description>
        <inlineHelpText>Number of approvals for policy form states that were submitted for approval.</inlineHelpText>
        <label>Number of Approvals</label>
        <summaryFilterItems>
            <field>Filing_Status__c.Filing_Status__c</field>
            <operation>equals</operation>
            <value>Approved</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Filing_Status__c.Filing_Strategy__c</field>
            <operation>equals</operation>
            <value>File for Approval</value>
        </summaryFilterItems>
        <summaryForeignKey>Filing_Status__c.Policy_Form__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_Outstanding_States__c</fullName>
        <label>Number of Outstanding States</label>
        <summaryFilterItems>
            <field>Filing_Status__c.Filing_Status__c</field>
            <operation>notEqual</operation>
            <value>Withdrawn, Closed, Approved, Not Filing, Approved - Dependent Group, Approved - Compact, Approved - Exempt</value>
        </summaryFilterItems>
        <summaryForeignKey>Filing_Status__c.Policy_Form__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_Policy_Form_States__c</fullName>
        <description>Total number of State Policy Forms that were submitted for approval.</description>
        <inlineHelpText>Total number of State Policy Forms that were submitted for approval.</inlineHelpText>
        <label>Number of Policy Form States</label>
        <summaryFilterItems>
            <field>Filing_Status__c.Filing_Strategy__c</field>
            <operation>equals</operation>
            <value>File for Approval</value>
        </summaryFilterItems>
        <summaryForeignKey>Filing_Status__c.Policy_Form__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_Withdrawals__c</fullName>
        <description>Number of withdrawals for policy form states that were submitted for approval. To be used for workflow to change Policy Form (parent) record to a status of Active.</description>
        <inlineHelpText>Number of withdrawals for policy form states that were initially submitted for approval.</inlineHelpText>
        <label>Number of Withdrawals</label>
        <summaryFilterItems>
            <field>Filing_Status__c.Filing_Status__c</field>
            <operation>equals</operation>
            <value>Withdrawn</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Filing_Status__c.Filing_Strategy__c</field>
            <operation>equals</operation>
            <value>File for Approval</value>
        </summaryFilterItems>
        <summaryForeignKey>Filing_Status__c.Policy_Form__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Policy_Form_Description__c</fullName>
        <label>Policy Form Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Policy_Form_Name__c</fullName>
        <label>Policy Form Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Policy_Form_State__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Policy Form State</label>
        <referenceTo>Filing_Status__c</referenceTo>
        <relationshipLabel>Policy Forms</relationshipLabel>
        <relationshipName>Policy_Form</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Policy_Form_Type_Other__c</fullName>
        <label>Policy Form Type Other</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Policy_Form_Type__c</fullName>
        <label>Policy Form Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Base Policy Form</fullName>
                </value>
                <value>
                    <fullName>Rider Policy Form</fullName>
                </value>
                <value>
                    <fullName>Application</fullName>
                </value>
                <value>
                    <fullName>Endorsement</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Policy Forms</relationshipLabel>
        <relationshipName>PolicyForms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_Base_Policy_Form__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Base Policy Form</label>
        <referenceTo>Policy_Form_Detail__c</referenceTo>
        <relationshipLabel>Related Rider Policy Forms</relationshipLabel>
        <relationshipName>Related_Base_Policy_Form</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_Base_Policy_Form_s__c</fullName>
        <label>Related Base Policy Form(s)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Related_Policy_Form__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Policy Form (Same Features)</label>
        <referenceTo>Policy_Form_Detail__c</referenceTo>
        <relationshipLabel>Related Policy Forms</relationshipLabel>
        <relationshipName>Policy_Forms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>State_Specific__c</fullName>
        <label>State Specific</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>FL</fullName>
                </value>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>KS</fullName>
                </value>
                <value>
                    <fullName>LA</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>MD</fullName>
                </value>
                <value>
                    <fullName>MN</fullName>
                </value>
                <value>
                    <fullName>ND</fullName>
                </value>
                <value>
                    <fullName>NH</fullName>
                </value>
                <value>
                    <fullName>NY</fullName>
                </value>
                <value>
                    <fullName>OH</fullName>
                </value>
                <value>
                    <fullName>OK</fullName>
                </value>
                <value>
                    <fullName>OR</fullName>
                </value>
                <value>
                    <fullName>QW</fullName>
                </value>
                <value>
                    <fullName>SS</fullName>
                </value>
                <value>
                    <fullName>TX</fullName>
                </value>
                <value>
                    <fullName>UT</fullName>
                </value>
                <value>
                    <fullName>VT</fullName>
                </value>
                <value>
                    <fullName>WA</fullName>
                </value>
                <value>
                    <fullName>WI</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>The status field describes whether state approvals have been provided or if the filing is still active and has not received state approvals.</description>
        <inlineHelpText>Whether state approvals have been provided or if the filing is still active and has not received state approvals.</inlineHelpText>
        <label>Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Policy_Form_State__c</fullName>
        <label>Total Policy Form State</label>
        <summaryForeignKey>Filing_Status__c.Policy_Form__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Policy_Form_State_in_Approved__c</fullName>
        <label>Total Policy Form State in Approved</label>
        <summaryFilterItems>
            <field>Filing_Status__c.Filing_Status__c</field>
            <operation>contains</operation>
            <value>Approved</value>
        </summaryFilterItems>
        <summaryForeignKey>Filing_Status__c.Policy_Form__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Policy Form</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Recently_Created</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY,YESTERDAY</value>
        </filters>
        <label>Recently Created</label>
    </listViews>
    <nameField>
        <label>Policy Form</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Policy Forms</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>